# Investment-alpha-engine

./: .gitignore  AGENTS.md  PROJECT_STATE.md  README.md  TASKS.md  package.json  pyproject.toml  requirements.txt
config/: credentials.yaml.template  phase1.json  phase1.yaml  phase2_cleared.yaml  phase3.yaml  phase4.yaml  phase5.yaml  phase5_cleared.yaml  phase6.yaml  phase6_cleared.yaml  phase7.yaml  phase8.yaml  schedule.yaml
diagnostics/: asset_contribution.csv  corr_filter_impact.md  false_positive_analysis.md  gate_failure_analysis.md  learning_validation.md  mistake_analysis_2026-02-06.md  mistake_analysis_2026-02-13.md  mistake_analysis_2026-02-20.md  mistake_analysis_2026-02-27.md  mistake_analysis_2026-03-06.md  mistake_analysis_2026-03-13.md  mistake_analysis_2026-03-16.md  mistake_analysis_2026-03-23.md  monthly_breakdown.csv  performance_report.md  phase2_clearance_report.md  phase3_deferred.md  phase3_failure_analysis.md  phase4_deferred.md  phase4_profile.md  phase4_runtime_blocker.md  phase5_clearance_report.md  phase6_clearance_report.md  phase7_gate_verification.md  phase8_geo_overlay_postmortem.md  phase8_geo_research_postmortem.md  regime_detection_validation.md  simulation_validation.md  v3_failure_analysis.md
docs/: Algorithmic_Trading_System_Gameplan.docx  live_deployment_guide.md  paper_trading_guide.md  plan.md
src/: __init__.py  backtest.py  broker_alpaca.py  broker_mock.py  capital_scaler.py  config_loader.py  correlation_filter.py  database.py  deployment.py  features.py  graph_engine.py  ingestion.py  logging_utils.py  main.py  phase2.py  (+21 more)
(+63 files in other folders)
