[project]
name = "investment-alpha-engine"
version = "0.1.0"
description = "Phase 1 infrastructure and data pipeline for the algorithmic trading system in docs/plan.md"
authors = [{ name = "Codex", email = "codex@example.com" }]
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "3.0.1"
yfinance = "1.2.0"
PyYAML = "6.0.3"
psycopg = { version = "3.3.3", extras = ["binary"] }
APScheduler = "3.11.2"
pgserver = "0.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
